novo dockerfile criado e com sucesso na publicacao no Heroku

--- a/WebApplication1/Properties/launchSettings.json
+++ b/WebApplication1/Properties/launchSettings.json
@@ -27,6 +27,7 @@
     "Docker": {
       "commandName": "Docker",
       "launchBrowser": true,
+      "https": null,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true,
       "useSSL": true
